[Extensions UI] Update ToolbarActionsBar::NeedsOverflow() for popped out actions

Update the logic in the ToolbarActionsBar to account for popped out actions when
determining if an overflow menu is necessary.

BUG=593302
TBR=avi@chromium.org (trivial cocoa change)

Review URL: https://codereview.chromium.org/1782223002

Cr-Commit-Position: refs/heads/master@{#380686}

Former-commit-id: 7be157366869c9aac12317e705cd2cbc757bac9a