chrome/browser/ui/cocoa/extensions/browser_action_button.mm
@@ -132,6 +132,7 @@ void ToolbarActionViewDelegateBridge::ShowContextMenu() {
 
   [controller_ toolbarActionsBar]->PopOutAction(
       viewController_,
+      false,
       base::Bind(&ToolbarActionViewDelegateBridge::DoShowContextMenu,
                  weakFactory_.GetWeakPtr()));
 }
